--- a/pages/partials/header.html
+++ b/pages/partials/header.html
@@ -1,6 +1,7 @@
 
 <html lang="pt-br">
   <head>
+    <title>Portal Danki Curso de NodeJs</title>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
